# food-order-system

./: .gitignore  docker-compose.yml  docker-rebuild.sh
authentication/: Cargo.toml  dockerfile
authentication/src/: jwt.rs  main.rs  postgres_client.rs  redis.rs  server_handler.rs  user_db.rs
entrance-api/: dockerfile  packages.json
entrance-api/src/: entrance_api.nim  main.nim  menuservice.nim
menu/: build.zig  build.zig.zon  dockerfile
menu/mongo-setup/: seed.js
menu/src/: food_item.zig  main.zig  menu_controller.zig  mongo.zig
menu/src/headers/: bson.zig  mongoc.zig
nginx/: index.html  nginx.conf
order-list/: LICENSE  dockerfile  shard.yml  tests.sh
order-list/spec/: order-list_spec.cr  spec_helper.cr
order-list/src/: duck_db.cr  jwt_module.cr  order-list.cr  order_list.cr  rabbit.cr  server_handler.cr
order_manager/: dockerfile  gleam.toml  healthcheck.sh  manifest.toml
order_manager/src/: jwt.gleam  order.gleam  order_item.gleam  order_manager.gleam  postgres.gleam  rabbit.gleam
tests/: package.json  tests.spec.ts
