[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "1.2.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-postgres = "0.7.17"
serde_json = "1.0.149"
base64 = "0.22.1"
