[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.2.0", features = ["tokio-comp"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-postgres = "0.7.17"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
password-hash = "0.6.1"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
